--- a/index.html
+++ b/index.html
@@ -257,16 +257,18 @@
                     </div> 
                 </section>
                 <h3 class="title is-3" id="Exp">Experiences</h3>
-<!--                <section class="experience">-->
-<!--                    <h4 class="title is-4">PhD Candidate <br><i>Eindhoven University of Technology</i></h4>-->
-<!--                    <ul style="list-style-type:circle">-->
-<!--                        <li>Project title: .....</li>-->
-<!--                        <li>...-->
-<!--                        </li>-->
-<!--                        <li>Supervision of prof.dr.ir. Peter de With (IEEE Life Fellow), dr.ir. Fons van der Sommen (Professor at TU/e)-->
-<!--                        </li>-->
-<!--                    </ul>-->
-<!--                </section>-->
+                <section class="experience">
+                    <h4 class="title is-4">PhD Candidate <br><i>Eindhoven University of Technology</i></h4>
+                    <ul style="list-style-type:circle">
+                        <li>Project title: <i>"Robust and Efficient Artificial Intelligence (AI) in Endoscopy"</i></li>
+                            <ul style="list-style-type:square">
+                            <li>Description: ...</li>
+                            <li>Supervision: prof.dr.ir. Peter de With (Full professor at TU/e, IEEE Life Fellow) and dr.ir. Fons van der Sommen (Associate professor at TU/e)</li>
+                            </ul>
+                        <li>Teaching Assistant for the M.Sc. course : <i>5LSM0 - Neural Networks for Computer Vision</i></li>
+                        </li>
+                    </ul>
+                </section>
                 <section class="experience">
                     <h4 class="title is-4">M.Sc Electrical Engineering - Signal Processing Systems <br><i>Eindhoven
                         University of Technology</i></h4>
@@ -283,7 +285,7 @@
                     </ul>
                 </section>
                 <section class="experience">
-                    <h4 class="title is-4">M.Sc. Internship <br><i>Philips Medical Systems B.V.</i></h4>
+                    <h4 class="title is-4">M.Sc. Internship<br><i>Philips Medical Systems B.V. and </i></h4>
                     <ul style="list-style-type:circle">
                         <li>Project title: <i>"Conditional Generative Adversarial Networks (cGAN) for low-dose Computed Tomography (CT) image denoising"</i></li>
                             <ul style="list-style-type:square">
