--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                             <li>Description: ...</li>
                             <li>Supervision: prof.dr.ir. Peter de With (Full professor at TU/e, IEEE Life Fellow) and dr.ir. Fons van der Sommen (Associate professor at TU/e)</li>
                             </ul>
-                        <li>Teaching Assistant for the M.Sc. course : <i>5LSM0 - Neural Networks for Computer Vision</i></li>
+                        <li>Teaching Assistant for the M.Sc. course: <i>5LSM0 - Neural Networks for Computer Vision</i></li>
                         </li>
                     </ul>
                 </section>
@@ -299,10 +299,10 @@
                     <h4 class="title is-4">B.Sc Electrical Engineering <br><i>Eindhoven
                         University of Technology</i></h4>
                     <ul style="list-style-type:circle">
-                        <li>Thesis title: <i>"Automatic Tissue Detection in Volumetric Laser Endomicroscopy (VLE) using Deep Learning"</i></li>
+                        <li><strong>Thesis title:</strong> <i>"Automatic Tissue Detection in Volumetric Laser Endomicroscopy (VLE) using Deep Learning"</i></li>
                             <ul style="list-style-type:square">
-                            <li>Description: Design a deep learning algorithm to automatically detect the tissue boundary in endoscopic VLE images of the esophagus</li>
-                            <li>Grade: 8.5/10</li>
+                            <li><strong>Description:</strong> Design a deep learning algorithm to automatically detect the tissue boundary in endoscopic VLE images of the esophagus</li>
+                            <li><strong>Grade:</strong> 8.5/10</li>
                             </ul>
                     </ul>
                 </section>
