--- a/index.html
+++ b/index.html
@@ -245,27 +245,25 @@
                             <p class="venue">...</p>
                             <div class="links">
                                 <p><span class="icon"><i class="ai ai-arxiv"></i></span><a
-                                        href="https://arxiv.org/abs/2310.17323" target="_blank">arXiv</a>
+                                        href="..." target="_blank">arXiv</a>
                                 </p>
                                 <p><span class="icon"><i class="fab fa-github"></i></span><a
-                                        href="https://github.com/TimSchoonbeek/IndustReal" target="_blank">Github</a>
+                                        href="..." target="_blank">Github</a>
                                 </p>
-                                <p><span class="icon"><i class="ai ai-open-access"></i></span><a
-                            href="https://data.4tu.nl/datasets/b008dd74-020d-4ea4-a8ba-7bb60769d224" target="_blank" class="text">Data</a></p>
                             </div>
                         </a>
                     </div> 
                 </section>
                 <h3 class="title is-3" id="Exp">Experiences</h3>
                 <section class="experience">
-                    <h4 class="title is-4">PhD Candidate <br><i>Eindhoven University of Technology</i></h4>
+                    <h4 class="title is-4">PhD Candidate - Video Coding & Architectures <br><i>Eindhoven University of Technology</i></h4>
                     <ul style="list-style-type:circle">
-                        <li>Project title: <i>"Robust and Efficient Artificial Intelligence (AI) in Endoscopy"</i></li>
+                        <li><strong>Project title: <i>"Robust and Efficient Artificial Intelligence (AI) in Endoscopy"</i></li>
                             <ul style="list-style-type:square">
-                            <li>Description: ...</li>
-                            <li>Supervision: prof.dr.ir. Peter de With (Full professor at TU/e, IEEE Life Fellow) and dr.ir. Fons van der Sommen (Associate professor at TU/e)</li>
+                            <li><strong>Description:</strong> ...</li>
+                            <li><strong>Supervision:</strong> prof.dr.ir. Peter de With (Full professor at TU/e, IEEE Life Fellow) and dr.ir. Fons van der Sommen (Associate professor at TU/e)</li>
                             </ul>
-                        <li>Teaching Assistant for the M.Sc. course: <i>5LSM0 - Neural Networks for Computer Vision</i></li>
+                        <li>Teaching Assistant for the  course: <i>5LSM0 - Neural Networks for Computer Vision</i></li>
                         </li>
                     </ul>
                 </section>
@@ -273,11 +271,11 @@
                     <h4 class="title is-4">M.Sc Electrical Engineering - Signal Processing Systems <br><i>Eindhoven
                         University of Technology</i></h4>
                     <ul style="list-style-type:circle">
-                        <li>Specialization: signal processing, machine learning, deep learning and computer vision</li>
-                        <li>Thesis title: <i>"Colorectal Polyp (CRP) Classification using Convolutional Neural Networks (CNNs)"</i></li>
+                        <li><strong>Specialization:</strong> signal processing, machine learning, deep learning and computer vision</li>
+                        <li><strong>Thesis title:</strong> <i>"Colorectal Polyp (CRP) Classification using Convolutional Neural Networks (CNNs)"</i></li>
                             <ul style="list-style-type:square">
-                            <li>Description: Investigated the improvement of performance, robustness and reliability of CNNs for CRP classification</li>
-                            <li>Grade: 9.0/10</li>
+                            <li><strong>Description:</strong> Investigated the improvement of performance, robustness and reliability of CNNs for CRP classification</li>
+                            <li><strong>Grade:</strong> 9.0/10</li>
                             </ul>
                         <li><a href="https://doi.org/10.1117/12.2606801" target="_blank">Conference Proceeding (SPIE Medical Imaging 2022)</a> </li>
                         <li>Graduated with distinction <i>Cum Laude</i></li>
@@ -285,14 +283,14 @@
                     </ul>
                 </section>
                 <section class="experience">
-                    <h4 class="title is-4">M.Sc. Internship<br><i>Philips Medical Systems B.V. and </i></h4>
+                    <h4 class="title is-4">M.Sc. Internship<br><i>Philips Medical Systems B.V. </i></h4>
                     <ul style="list-style-type:circle">
-                        <li>Project title: <i>"Conditional Generative Adversarial Networks (cGAN) for low-dose Computed Tomography (CT) image denoising"</i></li>
+                        <li><strong>Project title:</strong> <i>"Conditional Generative Adversarial Networks (cGAN) for low-dose Computed Tomography (CT) image denoising"</i></li>
                             <ul style="list-style-type:square">
-                            <li>Description: Investigated the impact of generator and discriminator architectures within the cGAN framework</li>
-                            <li>Grade: 9.0/10</li>
+                            <li><strong>Description:</strong> Investigated the impact of generator and discriminator architectures within the cGAN framework</li>
+                            <li><strong>Grade:</strong> 9.0/10</li>
                             </ul>
-                        <li><a href="10.1109/EMBC46164.2021.9629600" target="_blank">Conference Proceeding (IEEE EMBC 2021)</a> </li>
+                        <li><a href="https://ieeexplore.ieee.org/document/9629600/" target="_blank">Conference Proceeding (IEEE EMBC 2021)</a> </li>
                     </ul>
                 </section>
                 <section class="experience">
