--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                 <section class="experience">
                     <h4 class="title is-4">PhD Candidate - Video Coding & Architectures <br><i>Eindhoven University of Technology</i></h4>
                     <ul style="list-style-type:circle">
-                        <li><strong>Project title: <i>"Robust and Efficient Artificial Intelligence (AI) in Endoscopy"</i></li>
+                        <li><strong>Project title:</strong> <i>"Robust and Efficient Artificial Intelligence (AI) in Endoscopy"</i></li>
                             <ul style="list-style-type:square">
                             <li><strong>Description:</strong> ...</li>
                             <li><strong>Supervision:</strong> prof.dr.ir. Peter de With (Full professor at TU/e, IEEE Life Fellow) and dr.ir. Fons van der Sommen (Associate professor at TU/e)</li>
