--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                             <li><strong>Description:</strong> ...</li>
                             <li><strong>Supervision:</strong> prof.dr.ir. Peter de With (Full professor at TU/e, IEEE Life Fellow) and dr.ir. Fons van der Sommen (Associate professor at TU/e)</li>
                             </ul>
-                        <li>Teaching Assistant for the  course: <i>5LSM0 - Neural Networks for Computer Vision</i></li>
+                        <li><strong>Teaching Assistant:</strong> <i>"5LSM0 - Neural Networks for Computer Vision"</i></li>
                         </li>
                     </ul>
                 </section>
@@ -277,8 +277,8 @@
                             <li><strong>Description:</strong> Investigated the improvement of performance, robustness and reliability of CNNs for CRP classification</li>
                             <li><strong>Grade:</strong> 9.0/10</li>
                             </ul>
-                        <li><a href="https://doi.org/10.1117/12.2606801" target="_blank">Conference Proceeding (SPIE Medical Imaging 2022)</a> </li>
-                        <li>Graduated with distinction <i>Cum Laude</i></li>
+                        <li><strong>Conference Proceeding:</strong> <a href="https://doi.org/10.1117/12.2606801" target="_blank">SPIE Medical Imaging 2022</a> </li>
+                        <li><strong>Honors:</strong> <i>Cum Laude</i></li>
                         </li>
                     </ul>
                 </section>
@@ -290,7 +290,7 @@
                             <li><strong>Description:</strong> Investigated the impact of generator and discriminator architectures within the cGAN framework</li>
                             <li><strong>Grade:</strong> 9.0/10</li>
                             </ul>
-                        <li><a href="https://ieeexplore.ieee.org/document/9629600/" target="_blank">Conference Proceeding (IEEE EMBC 2021)</a> </li>
+                        <li><strong>Conference Proceeding:</strong> <a href="https://ieeexplore.ieee.org/document/9629600/" target="_blank">IEEE EMBC 2021</a> </li>
                     </ul>
                 </section>
                 <section class="experience">
