--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                     <img src="KoenKusters.jpg">
                 </figure>
                 <h3 class="title is-3">About me</h3>
-                <p>Place here about me...</p>
+                <p>Passionate about machine learning, deep learning and computer vision in the medical domain.</p>
                 <p STYLE="margin:10px 0px 10px 0px">Contact: <a href="mailto:c.h.j.kusters@tue.nl">c.h.j.kusters@tue.nl</a>.</p>
                 <div class="parent">
                     <div class="child float-left-child">
@@ -235,21 +235,18 @@
                 <section class="publication">
                     <div class="column is-one-third">
                         <div class="image">
-                            <img src="logos/vca.png">
+                            <img src="publications/ieee_embc.png">
                         </div>
                     </div>
                     <div class="details">
                         <a href="index.html" target="_blank">
                             <h4 class="title is-4">...</h4>
-                            <p class="authors"><u>C.H.J. Kusters</u></p>
-                            <p class="venue">...</p>
+                            <p class="authors">, Luis A. Zavala-Mondragón, Javier Oliván Bescós, Peter Rongen, Peter H.N. de With, Fons van der Sommen</p>
+                            <p class="venue">IEEE EMBC 2021</p>
                             <div class="links">
-                                <p><span class="icon"><i class="ai ai-arxiv"></i></span><a
-                                        href="..." target="_blank">arXiv</a>
-                                </p>
-                                <p><span class="icon"><i class="fab fa-github"></i></span><a
-                                        href="..." target="_blank">Github</a>
-                                </p>
+                                <p><span class="icon"><i class="ai ai-ieee"></i></span><a
+                                        href="https://ieeexplore.ieee.org/document/9629600/" target="_blank">IEEE
+                                    proceedings</a></p>
                             </div>
                         </a>
                     </div> 
@@ -258,12 +255,16 @@
                 <section class="experience">
                     <h4 class="title is-4">PhD Candidate - Video Coding & Architectures <br><i>Eindhoven University of Technology</i></h4>
                     <ul style="list-style-type:circle">
-                        <li><strong>Project title:</strong> <i>"Robust and Efficient Artificial Intelligence (AI) in Endoscopy"</i></li>
+                        <li><strong>Project title:</strong> Robust and Efficient Artificial Intelligence (AI) in Endoscopy</li>
                             <ul style="list-style-type:square">
-                            <li><strong>Description:</strong> ...</li>
+                            <li><strong>Description:</strong> Focus on robust and efficient Artificial Intelligence (AI) in endoscopy,
+                                where machine learning and computer vision techniques are combined with medical knowledge to improve algorithms and make the next
+                                steps towards clinical application of AI-based supportive systems in endoscopy.
+                                Research in close collaboration with colleagues from Amsterdam University Medical Centers and mainly includes the detection
+                                and diagnosis of early neoplasia in Barrett's Esophagus.</li>
                             <li><strong>Supervision:</strong> prof.dr.ir. Peter de With (Full professor at TU/e, IEEE Life Fellow) and dr.ir. Fons van der Sommen (Associate professor at TU/e)</li>
                             </ul>
-                        <li><strong>Teaching Assistant:</strong> <i>"5LSM0 - Neural Networks for Computer Vision"</i></li>
+                        <li><strong>Teaching Assistant:</strong> Neural Networks for Computer Vision (M.Sc Course)</li>
                         </li>
                     </ul>
                 </section>
@@ -271,8 +272,8 @@
                     <h4 class="title is-4">M.Sc Electrical Engineering - Signal Processing Systems <br><i>Eindhoven
                         University of Technology</i></h4>
                     <ul style="list-style-type:circle">
-                        <li><strong>Specialization:</strong> signal processing, machine learning, deep learning and computer vision</li>
-                        <li><strong>Thesis title:</strong> <i>"Colorectal Polyp (CRP) Classification using Convolutional Neural Networks (CNNs)"</i></li>
+                        <li><strong>Specialization:</strong> Signal processing, machine learning, deep learning and computer vision</li>
+                        <li><strong>Thesis title:</strong> Colorectal Polyp (CRP) Classification using Convolutional Neural Networks (CNNs)</li>
                             <ul style="list-style-type:square">
                             <li><strong>Description:</strong> Investigated the improvement of performance, robustness and reliability of CNNs for CRP classification</li>
                             <li><strong>Grade:</strong> 9.0/10</li>
@@ -285,7 +286,7 @@
                 <section class="experience">
                     <h4 class="title is-4">M.Sc. Internship<br><i>Philips Medical Systems B.V. </i></h4>
                     <ul style="list-style-type:circle">
-                        <li><strong>Project title:</strong> <i>"Conditional Generative Adversarial Networks (cGAN) for low-dose Computed Tomography (CT) image denoising"</i></li>
+                        <li><strong>Project title:</strong> Conditional Generative Adversarial Networks (cGAN) for low-dose Computed Tomography (CT) image denoising</li>
                             <ul style="list-style-type:square">
                             <li><strong>Description:</strong> Investigated the impact of generator and discriminator architectures within the cGAN framework</li>
                             <li><strong>Grade:</strong> 9.0/10</li>
@@ -297,7 +298,7 @@
                     <h4 class="title is-4">B.Sc Electrical Engineering <br><i>Eindhoven
                         University of Technology</i></h4>
                     <ul style="list-style-type:circle">
-                        <li><strong>Thesis title:</strong> <i>"Automatic Tissue Detection in Volumetric Laser Endomicroscopy (VLE) using Deep Learning"</i></li>
+                        <li><strong>Thesis title:</strong> Automatic Tissue Detection in Volumetric Laser Endomicroscopy (VLE) using Deep Learning</li>
                             <ul style="list-style-type:square">
                             <li><strong>Description:</strong> Design a deep learning algorithm to automatically detect the tissue boundary in endoscopic VLE images of the esophagus</li>
                             <li><strong>Grade:</strong> 8.5/10</li>
