--- a/index.html
+++ b/index.html
@@ -235,13 +235,33 @@
                 <section class="publication">
                     <div class="column is-one-third">
                         <div class="image">
-                            <img src="publications/ieee_embc.png">
+                            <img src="publications/SPIE.png">
                         </div>
                     </div>
                     <div class="details">
                         <a href="index.html" target="_blank">
-                            <h4 class="title is-4">...</h4>
-                            <p class="authors">, Luis A. Zavala-Mondragón, Javier Oliván Bescós, Peter Rongen, Peter H.N. de With, Fons van der Sommen</p>
+                            <h4 class="title is-4">Colorectal Polyp classification using Confidence-Calibrated Convolutional Neural Networks</h4>
+                            <p class="authors"><u>Koen C. Kusters</u>, Thom Scheeve, Nikoo Dehghani, Quirine E.W. van der Zander,
+                                Ramon-Michel Schreuder, Ad A.M. Masclee, Erik J. Schoon, Fons van der Sommen, Peter H.N. de With</p>
+                            <p class="venue">SPIE Medical Imaging 2022</p>
+                            <div class="links">
+                                <p><span class="icon"><i class="ai ai-archive"></i></span><a
+                                        href="https://doi.org/10.1117/12.2606801" target="_blank">SPIE Digital Library</a></p>
+                            </div>
+                        </a>
+                    </div>
+                </section>
+                <section class="publication">
+                    <div class="column is-one-third">
+                        <div class="image">
+                            <img src="publications/ieee_embc.jpg">
+                        </div>
+                    </div>
+                    <div class="details">
+                        <a href="index.html" target="_blank">
+                            <h4 class="title is-4">Conditional Generative Adversarial Networks for low-dose CT image denoising aiming
+                            at preservation of critical image content</h4>
+                            <p class="authors"><u>Koen C. Kusters</u>, Luis A. Zavala-Mondragón, Javier Oliván Bescós, Peter Rongen, Peter H.N. de With, Fons van der Sommen</p>
                             <p class="venue">IEEE EMBC 2021</p>
                             <div class="links">
                                 <p><span class="icon"><i class="ai ai-ieee"></i></span><a
