--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         .publication .image {
             margin-bottom: 0.5rem;
             margin-right: 0.5rem;
-            border: 2px solid #ccc;
+            /*border: 2px solid #ccc;*/
             padding: 0.25rem;
         }
 
@@ -232,6 +232,46 @@
             </div>
             <div class="column">
                 <h3 class="title is-3" id="Pubs">Publications</h3>
+                <section class="publication">
+                    <div class="column is-one-third">
+                        <div class="image">
+                            <img src="publications/SPIE.png">
+                        </div>
+                    </div>
+                    <div class="details">
+                        <a href="index.html" target="_blank">
+                            <h4 class="title is-4">Real-time Barrett's neoplasia characterization in NBI videos using
+                            an int8-based quantized neural network</h4>
+                            <p class="authors"><u>Carolus H.J. Kusters</u>, Tim G.W. Boers, Jelmer B. Jukema, Martijn R. Jong, Kiki N. Fockens,
+                                Albert J. de Groof, Jacques J. Bergman, Fons van der Sommen, Peter H.N. de With</p>
+                            <p class="venue">CaPTion Workshop (1st Edition) - Satellite Event MICCAI 2022</p>
+                            <div class="links">
+                                <p><span class="icon"><i class="ai ai-archive"></i></span><a
+                                        href="https://doi.org/10.1117/12.2647557" target="_blank">SPIE Digital Library</a></p>
+                                <p><span class="icon"><i class="ai fa-trophy"></i></span> Computer-Aided Diagnosis Best Paper Award</p>
+                            </div>
+                        </a>
+                    </div>
+                </section>
+                <section class="publication">
+                    <div class="column is-one-third">
+                        <div class="image">
+                            <img src="publications/miccai_2022.png">
+                        </div>
+                    </div>
+                    <div class="details">
+                        <a href="index.html" target="_blank">
+                            <h4 class="title is-4">A CAD System for Real-Time Characterization of Neoplasia in Barrett's Esophagus NBI Videos</h4>
+                            <p class="authors"><u>Carolus H.J. Kusters</u>, Tim G.W. Boers, Jelmer B. Jukema, Martijn R. Jong, Kiki N. Fockens,
+                                Albert J. de Groof, Jacques J. Bergman, Fons van der Sommen, Peter H.N. de With</p>
+                            <p class="venue">CaPTion Workshop (1st Edition) - Satellite Event MICCAI 2022</p>
+                            <div class="links">
+                                <p><span class="icon"><i class="ai ai-archive"></i></span><a
+                                        href="https://doi.org/10.1007/978-3-031-17979-2_9" target="_blank">Springer Proceedings</a></p>
+                            </div>
+                        </a>
+                    </div>
+                </section>
                 <section class="publication">
                     <div class="column is-one-third">
                         <div class="image">
