--- a/index.html
+++ b/index.html
@@ -235,6 +235,45 @@
                 <section class="publication">
                     <div class="column is-one-third">
                         <div class="image">
+                            <img src="publications/miccai_2024.png">
+                        </div>
+                    </div>
+                    <div class="details">
+                        <a href="index.html" target="_blank">
+                            <h4 class="title is-4">Optimizing Multi-Expert Consensus for Classification and Precise Localization of Barrett's Neoplasia</h4>
+                            <p class="authors"><u>Carolus H.J. Kusters</u>, Tim G.W. Boers, Tim J.M. Jaspers, Martijn R. Jong, Rixta A.H. van Eijck van Heslinga,
+                                Albert J. de Groof, Jacques J. Bergman, Fons van der Sommen, Peter H.N. de With</p>
+                            <p class="venue">CaPTion Workshop (3rd Edition) - Satellite Event MICCAI 2024</p>
+                            <div class="links">
+                                <p><span class="icon"><i class="ai ai-archive"></i></span> Accepted for publication</p>
+<!--                                <p><span class="icon"><i class="ai ai-archive"></i></span><a-->
+<!--                                        href="..." target="_blank">Springer Proceedings</a></p>-->
+                            </div>
+                        </a>
+                    </div>
+                </section>
+                <section class="publication">
+                    <div class="column is-one-third">
+                        <div class="image">
+                            <img src="publications/miccai_2023.png">
+                        </div>
+                    </div>
+                    <div class="details">
+                        <a href="index.html" target="_blank">
+                            <h4 class="title is-4">CNNs vs. Transformers: Performance and Robustness in Endoscopic Image Analysis</h4>
+                            <p class="authors"><u>Carolus H.J. Kusters</u>, Tim G.W. Boers, Tim J.M. Jaspers, Jelmer B. Jukema, Martijn R. Jong, Kiki N. Fockens,
+                                Albert J. de Groof, Jacques J. Bergman, Fons van der Sommen, Peter H.N. de With</p>
+                            <p class="venue">AMAI Workshop (2nd Edition) - Satellite Event MICCAI 2023</p>
+                            <div class="links">
+                                <p><span class="icon"><i class="ai ai-archive"></i></span><a
+                                        href="https://doi.org/10.1007/978-3-031-47076-9_3" target="_blank">Springer Proceedings</a></p>
+                            </div>
+                        </a>
+                    </div>
+                </section>
+                <section class="publication">
+                    <div class="column is-one-third">
+                        <div class="image">
                             <img src="publications/SPIE.png">
                         </div>
                     </div>
@@ -244,11 +283,11 @@
                             an int8-based quantized neural network</h4>
                             <p class="authors"><u>Carolus H.J. Kusters</u>, Tim G.W. Boers, Jelmer B. Jukema, Martijn R. Jong, Kiki N. Fockens,
                                 Albert J. de Groof, Jacques J. Bergman, Fons van der Sommen, Peter H.N. de With</p>
-                            <p class="venue">CaPTion Workshop (1st Edition) - Satellite Event MICCAI 2022</p>
+                            <p class="venue">SPIE Medical Imaging 2023</p>
                             <div class="links">
                                 <p><span class="icon"><i class="ai ai-archive"></i></span><a
                                         href="https://doi.org/10.1117/12.2647557" target="_blank">SPIE Digital Library</a></p>
-                                <p><span class="icon"><i class="ai fa-trophy"></i></span> Computer-Aided Diagnosis Best Paper Award</p>
+<!--                                <p><span class="icon"><i class="ai fa-trophy"></i></span> Computer-Aided Diagnosis Best Paper Award</p>-->
                             </div>
                         </a>
                     </div>
