--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                             <div class="links">
                                 <p><span class="icon"><i class="ai ai-archive"></i></span><a
                                         href="https://doi.org/10.1117/12.2647557" target="_blank">SPIE Digital Library</a></p>
-<!--                                <p><span class="icon"><i class="ai fa-trophy"></i></span> Computer-Aided Diagnosis Best Paper Award</p>-->
+                                <p><span class="icon"><i class="logo"><img src="logos/prize.jpg"></i></span> Computer-Aided Diagnosis Best Paper Award</p>
                             </div>
                         </a>
                     </div>
