--- a/index.html
+++ b/index.html
@@ -246,6 +246,8 @@
                             <p class="venue">CaPTion Workshop (3rd Edition) - Satellite Event MICCAI 2024</p>
                             <div class="links">
                                 <p><span class="icon"><i class="ai ai-archive"></i></span> Accepted for publication</p>
+                                <p><span class="icon"><i class="fab fa-github"></i></span><a
+                                        href="https://github.com/chjkusters/BE-CADe-GT" target="_blank">Github</a></p>
 <!--                                <p><span class="icon"><i class="ai ai-archive"></i></span><a-->
 <!--                                        href="..." target="_blank">Springer Proceedings</a></p>-->
                             </div>
@@ -267,6 +269,8 @@
                             <div class="links">
                                 <p><span class="icon"><i class="ai ai-archive"></i></span><a
                                         href="https://doi.org/10.1007/978-3-031-47076-9_3" target="_blank">Springer Proceedings</a></p>
+                                <p><span class="icon"><i class="fab fa-github"></i></span><a
+                                        href="https://github.com/chjkusters/Endoscopy-CNNs-vs-Transformers" target="_blank">Github</a></p>
                             </div>
                         </a>
                     </div>
