--- a/index.html
+++ b/index.html
@@ -209,8 +209,12 @@
                 <figure class="image">
                     <img src="KoenKusters.jpg">
                 </figure>
-                <h3 class="title is-3">About me</h3>
-                <p>Passionate about machine learning, deep learning and computer vision in the medical domain.</p>
+                <h3 class="title is-3">Biography</h3>
+                <p>Carolus H.J. (Koen) Kusters received the B.Sc and M.Sc (cum laude) degrees in Electrical Engineering from
+                    Eindhoven University of Technology, in 2019 and 2021, respectively. He currently is with the Video Coding & Architectures
+                    Research Group, Department of Electrical Engineering, Eindhoven University of Technology, as a PhD Candidate. He is passionate
+                    about machine learning, deep learning and computer vision for medical applications, which connects with the research focus
+                    of the PhD project: "Robust and Efficient AI in Endoscopy".</p>
                 <p STYLE="margin:10px 0px 10px 0px">Contact: <a href="mailto:c.h.j.kusters@tue.nl">c.h.j.kusters@tue.nl</a>.</p>
                 <div class="parent">
                     <div class="child float-left-child">
