--- a/index.html
+++ b/index.html
@@ -239,6 +239,28 @@
                 <section class="publication">
                     <div class="column is-one-third">
                         <div class="image">
+                            <img src="publications/media.jpg">
+                        </div>
+                    </div>
+                    <div class="details">
+                        <a href="index.html" target="_blank">
+                            <h4 class="title is-4">Will Transformers change gastrointestinal endoscopic image analysis? A comparative analysis
+                            between CNNs and Transformers, in terms of performance, robustness and generalization</h4>
+                            <p class="authors"><u>Carolus H.J. Kusters</u>, Tim G.W. Boers, Tim J.M. Jaspers, Martijn R. Jong, Jelmer B. Jukema, Kiki N. Fockens,
+                                Albert J. de Groof, Jacques J. Bergman, Fons van der Sommen, Peter H.N. de With</p>
+                            <p class="venue">Submission under review at Medical Image Analysis</p>
+                            <div class="links">
+                                <p><span class="icon"><i class="ai ai-archive"></i></span><a
+                                        href="..." target="_blank">Medical Image Analysis - Volume XX </a></p>
+                                <p><span class="icon"><i class="fab fa-github"></i></span><a
+                                        href="https://github.com/chjkusters/Endoscopy-CNNs-vs-Transformers" target="_blank">Github</a></p>
+                            </div>
+                        </a>
+                    </div>
+                </section>
+                <section class="publication">
+                    <div class="column is-one-third">
+                        <div class="image">
                             <img src="publications/miccai_2024.png">
                         </div>
                     </div>
