--- a/index.html
+++ b/index.html
@@ -118,6 +118,10 @@
             margin-bottom: 1rem;
         }
 
+        .image_media {
+            height: 300px;
+        }
+
         nav {
             position: fixed;
             top: 0;
@@ -173,7 +177,7 @@
                         Carolus H.J. (Koen) Kusters
                     </h1>
                     <h2 class="subtitle">
-                        PhD Candidate Medical Computer Vision & AI -- <a
+                        PhD Candidate Medical Computer Vision & AI - <a
                             href="mailto:c.h.j.kusters@tue.nl">c.h.j.kusters@tue.nl</a>
                     </h2>
                 </div>
@@ -210,7 +214,7 @@
                     <img src="KoenKusters.jpg">
                 </figure>
                 <h3 class="title is-3">Biography</h3>
-                <p>Carolus H.J. (Koen) Kusters received the B.Sc and M.Sc (cum laude) degrees in Electrical Engineering from
+                <p>Carolus H.J. (Koen) Kusters received the B.Sc and M.Sc (<i>cum laude</i>) degrees in Electrical Engineering from
                     Eindhoven University of Technology, in 2019 and 2021, respectively. He currently is with the Video Coding & Architectures
                     Research Group, Department of Electrical Engineering, Eindhoven University of Technology, as a PhD Candidate. He is passionate
                     about machine learning, deep learning and computer vision for medical applications, which connects with the research focus
@@ -238,7 +242,7 @@
                 <h3 class="title is-3" id="Pubs">Publications</h3>
                 <section class="publication">
                     <div class="column is-one-third">
-                        <div class="image">
+                        <div class="image_media">
                             <img src="publications/media.jpg">
                         </div>
                     </div>
@@ -250,8 +254,8 @@
                                 Albert J. de Groof, Jacques J. Bergman, Fons van der Sommen, Peter H.N. de With</p>
                             <p class="venue">Submission under review at Medical Image Analysis</p>
                             <div class="links">
-                                <p><span class="icon"><i class="ai ai-archive"></i></span><a
-                                        href="..." target="_blank">Medical Image Analysis - Volume XX </a></p>
+<!--                                <p><span class="icon"><i class="ai ai-archive"></i></span><a-->
+<!--                                        href="..." target="_blank">Medical Image Analysis - Volume XX </a></p>-->
                                 <p><span class="icon"><i class="fab fa-github"></i></span><a
                                         href="https://github.com/chjkusters/Endoscopy-CNNs-vs-Transformers" target="_blank">Github</a></p>
                             </div>
@@ -271,11 +275,10 @@
                                 Albert J. de Groof, Jacques J. Bergman, Fons van der Sommen, Peter H.N. de With</p>
                             <p class="venue">CaPTion Workshop (3rd Edition) - Satellite Event MICCAI 2024</p>
                             <div class="links">
-                                <p><span class="icon"><i class="ai ai-archive"></i></span> Accepted for publication</p>
-                                <p><span class="icon"><i class="fab fa-github"></i></span><a
-                                        href="https://github.com/chjkusters/BE-CADe-GT" target="_blank">Github</a></p>
 <!--                                <p><span class="icon"><i class="ai ai-archive"></i></span><a-->
 <!--                                        href="..." target="_blank">Springer Proceedings</a></p>-->
+                                <p><span class="icon"><i class="fab fa-github"></i></span><a
+                                        href="https://github.com/chjkusters/BE-CADe-GT" target="_blank">Github</a></p>
                             </div>
                         </a>
                     </div>
