--- a/index.html
+++ b/index.html
@@ -98,6 +98,10 @@
             transition: transform 0.3s ease-in-out;
         }
 
+        .logo_prize img {
+            height: 50px;
+        }
+
         .logo_colab img {
             height: 50px;
             margin-left: 3em;
@@ -119,7 +123,7 @@
         }
 
         .image_media {
-            height: 300px;
+            height: 200px;
         }
 
         nav {
@@ -320,7 +324,7 @@
                             <div class="links">
                                 <p><span class="icon"><i class="ai ai-archive"></i></span><a
                                         href="https://doi.org/10.1117/12.2647557" target="_blank">SPIE Digital Library</a></p>
-                                <br><p><span class="icon"><i class="logo"><img src="logos/prize.jpg"></i></span> Computer-Aided Diagnosis Best Paper Award</p>
+                                <br><p><span class="icon"><i class="logo_prize"><img src="logos/prize.jpg"></i></span> Computer-Aided Diagnosis Best Paper Award</p>
                             </div>
                         </a>
                     </div>
