--- a/index.html
+++ b/index.html
@@ -98,10 +98,6 @@
             transition: transform 0.3s ease-in-out;
         }
 
-        .logo_prize img {
-            height: 50px;
-        }
-
         .logo_colab img {
             height: 50px;
             margin-left: 3em;
@@ -123,7 +119,7 @@
         }
 
         .image_media {
-            height: 200px;
+            height: 100px;
         }
 
         nav {
@@ -251,7 +247,7 @@
                         </div>
                     </div>
                     <div class="details">
-                        <a href="index.html" target="_blank">
+<!--                        <a href="index.html" target="_blank">-->
                             <h4 class="title is-4">Will Transformers change gastrointestinal endoscopic image analysis? A comparative analysis
                             between CNNs and Transformers, in terms of performance, robustness and generalization</h4>
                             <p class="authors"><u>Carolus H.J. Kusters</u>, Tim G.W. Boers, Tim J.M. Jaspers, Martijn R. Jong, Jelmer B. Jukema, Kiki N. Fockens,
@@ -263,7 +259,7 @@
                                 <p><span class="icon"><i class="fab fa-github"></i></span><a
                                         href="https://github.com/chjkusters/Endoscopy-CNNs-vs-Transformers" target="_blank">Github</a></p>
                             </div>
-                        </a>
+<!--                        </a>-->
                     </div>
                 </section>
                 <section class="publication">
@@ -324,7 +320,7 @@
                             <div class="links">
                                 <p><span class="icon"><i class="ai ai-archive"></i></span><a
                                         href="https://doi.org/10.1117/12.2647557" target="_blank">SPIE Digital Library</a></p>
-                                <br><p><span class="icon"><i class="logo_prize"><img src="logos/prize.jpg"></i></span> Computer-Aided Diagnosis Best Paper Award</p>
+                                <br><p><span class="icon"><i class="logo"><img src="logos/prize.jpg"></i></span> Computer-Aided Diagnosis Best Paper Award</p>
                             </div>
                         </a>
                     </div>
