--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         }
 
         .image_media {
-            height: 100px;
+            margin-bottom: 0rem;
         }
 
         nav {
@@ -269,7 +269,7 @@
                         </div>
                     </div>
                     <div class="details">
-                        <a href="index.html" target="_blank">
+<!--                        <a href="index.html" target="_blank">-->
                             <h4 class="title is-4">Optimizing Multi-Expert Consensus for Classification and Precise Localization of Barrett's Neoplasia</h4>
                             <p class="authors"><u>Carolus H.J. Kusters</u>, Tim G.W. Boers, Tim J.M. Jaspers, Martijn R. Jong, Rixta A.H. van Eijck van Heslinga,
                                 Albert J. de Groof, Jacques J. Bergman, Fons van der Sommen, Peter H.N. de With</p>
@@ -280,7 +280,7 @@
                                 <p><span class="icon"><i class="fab fa-github"></i></span><a
                                         href="https://github.com/chjkusters/BE-CADe-GT" target="_blank">Github</a></p>
                             </div>
-                        </a>
+<!--                        </a>-->
                     </div>
                 </section>
                 <section class="publication">
@@ -290,7 +290,7 @@
                         </div>
                     </div>
                     <div class="details">
-                        <a href="index.html" target="_blank">
+<!--                        <a href="index.html" target="_blank">-->
                             <h4 class="title is-4">CNNs vs. Transformers: Performance and Robustness in Endoscopic Image Analysis</h4>
                             <p class="authors"><u>Carolus H.J. Kusters</u>, Tim G.W. Boers, Tim J.M. Jaspers, Jelmer B. Jukema, Martijn R. Jong, Kiki N. Fockens,
                                 Albert J. de Groof, Jacques J. Bergman, Fons van der Sommen, Peter H.N. de With</p>
@@ -301,7 +301,7 @@
                                 <p><span class="icon"><i class="fab fa-github"></i></span><a
                                         href="https://github.com/chjkusters/Endoscopy-CNNs-vs-Transformers" target="_blank">Github</a></p>
                             </div>
-                        </a>
+<!--                        </a>-->
                     </div>
                 </section>
                 <section class="publication">
@@ -311,7 +311,7 @@
                         </div>
                     </div>
                     <div class="details">
-                        <a href="index.html" target="_blank">
+<!--                        <a href="index.html" target="_blank">-->
                             <h4 class="title is-4">Real-time Barrett's neoplasia characterization in NBI videos using
                             an int8-based quantized neural network</h4>
                             <p class="authors"><u>Carolus H.J. Kusters</u>, Tim G.W. Boers, Jelmer B. Jukema, Martijn R. Jong, Kiki N. Fockens,
@@ -322,7 +322,7 @@
                                         href="https://doi.org/10.1117/12.2647557" target="_blank">SPIE Digital Library</a></p>
                                 <br><p><span class="icon"><i class="logo"><img src="logos/prize.jpg"></i></span> Computer-Aided Diagnosis Best Paper Award</p>
                             </div>
-                        </a>
+<!--                        </a>-->
                     </div>
                 </section>
                 <section class="publication">
@@ -332,7 +332,7 @@
                         </div>
                     </div>
                     <div class="details">
-                        <a href="index.html" target="_blank">
+<!--                        <a href="index.html" target="_blank">-->
                             <h4 class="title is-4">A CAD System for Real-Time Characterization of Neoplasia in Barrett's Esophagus NBI Videos</h4>
                             <p class="authors"><u>Carolus H.J. Kusters</u>, Tim G.W. Boers, Jelmer B. Jukema, Martijn R. Jong, Kiki N. Fockens,
                                 Albert J. de Groof, Jacques J. Bergman, Fons van der Sommen, Peter H.N. de With</p>
@@ -341,7 +341,7 @@
                                 <p><span class="icon"><i class="ai ai-archive"></i></span><a
                                         href="https://doi.org/10.1007/978-3-031-17979-2_9" target="_blank">Springer Proceedings</a></p>
                             </div>
-                        </a>
+<!--                        </a>-->
                     </div>
                 </section>
                 <section class="publication">
@@ -351,7 +351,7 @@
                         </div>
                     </div>
                     <div class="details">
-                        <a href="index.html" target="_blank">
+<!--                        <a href="index.html" target="_blank">-->
                             <h4 class="title is-4">Colorectal Polyp classification using Confidence-Calibrated Convolutional Neural Networks</h4>
                             <p class="authors"><u>Koen C. Kusters</u>, Thom Scheeve, Nikoo Dehghani, Quirine E.W. van der Zander,
                                 Ramon-Michel Schreuder, Ad A.M. Masclee, Erik J. Schoon, Fons van der Sommen, Peter H.N. de With</p>
@@ -360,7 +360,7 @@
                                 <p><span class="icon"><i class="ai ai-archive"></i></span><a
                                         href="https://doi.org/10.1117/12.2606801" target="_blank">SPIE Digital Library</a></p>
                             </div>
-                        </a>
+<!--                        </a>-->
                     </div>
                 </section>
                 <section class="publication">
@@ -370,7 +370,7 @@
                         </div>
                     </div>
                     <div class="details">
-                        <a href="index.html" target="_blank">
+<!--                        <a href="index.html" target="_blank">-->
                             <h4 class="title is-4">Conditional Generative Adversarial Networks for low-dose CT image denoising aiming
                             at preservation of critical image content</h4>
                             <p class="authors"><u>Koen C. Kusters</u>, Luis A. Zavala-Mondragón, Javier Oliván Bescós, Peter Rongen, Peter H.N. de With, Fons van der Sommen</p>
@@ -380,7 +380,7 @@
                                         href="https://ieeexplore.ieee.org/document/9629600/" target="_blank">IEEE
                                     proceedings</a></p>
                             </div>
-                        </a>
+<!--                        </a>-->
                     </div> 
                 </section>
                 <h3 class="title is-3" id="Exp">Experiences</h3>
